--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the MainPage page.
+  Generated template for the LoginPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,11 +7,12 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>main</ion-title>
+    <ion-title>login</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
 </ion-content>
