--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,9 +1,4 @@
-<!--
-  Generated template for the LoginPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -14,5 +9,10 @@
 
 
 <ion-content padding>
-
+<p *ngFor="let user of data">
+  {{user.pacientes.nome}}
+  {{user.pacientes.email}}
+  {{user.pacientes.telefone}}
+  {{user.pacientes.sexo}}
+</p>
 </ion-content>
